# boxdrive

./: .gitignore  README.md  flake.nix  pyproject.toml  shell.nix
.github/actions/common-setup/: action.yaml  action.yml
.github/actions/start-fastapi-server/: action.yaml
.github/workflows/: ci.yml
boxdrive/: __init__.py  app.py  common.py  const.py  routes.py  schemas.py
examples/: basic_usage.py  custom_store.pyi  gitlab.py  inmemory.py
nix/: poetry-overrides.nix  shell.nix
src/boxdrive/: __init__.py  _create_app.py  _keysmith.py  constants.py  create_app.py  handlers.py  main.py  memory_store.py  middleware.py  s3.py  schemas.py  store.py
src/boxdrive/schemas/: __init__.py  store.py  xml.py
src/boxdrive/stores/: __init__.py  _utils.py  gitlab.py  gitstore.py  inmemory.py  memory.py
src/boxdrive/stores/gitlab/: __init__.py  client.py  store.py
tests/: test_app.py  test_init.py  test_memory_store.py
tests/e2e/: test_boto.py  test_concurrent_access.py
tests/unit/: test_app.py  test_inmemory.py  test_keysmith.py  test_memory_store.py  test_middleware.py  test_store.py  test_version.py
