[project]
name = "boxdrive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alex Severin", email = "severinalexeyv@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["mypy>=1.16.1", "pytest>=8.4.1", "pytest-asyncio>=1.0.0", "ruff>=0.12.1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
builtins = ["_"]

[tool.ruff.lint]
ignore = ["E731"]
extend-select = [
    "UP", # pyupgrade
    "I",  # isort
]

[tool.ruff.lint.isort]
combine-as-imports = true
